# tmpl

./: .dockerignore  CONFIGURATION.md  Dockerfile  README.md  build.sh  pyproject.toml  tmpl.py
example/: about.txt  tmpl.yaml
example/files/docs/: lorem.txt
example/templates/: unit-tests.in
old/: README.md  tmpl.py
old/example/: included.yaml  lib.py  stdin.test
src/tmpl/: __init__.py  cli.py  config.py  jengine.py  jfuncs.py  utils.py
tests/test_tmpl/: __init__.py  test_cli.py  test_config.py  test_jengine.py  test_jfuncs.py  test_utils.py
