[tool.poetry]
authors = ["Harrison Totty <harrisongtotty@gmail.com>"]
description = "A highly-configurable general-purpose templating program."
name = "tmpl"
readme = "README.md"
repository = "https://github.com/HarrisonTotty/tmpl"
version = "2.1.2"

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "*"
PyYAML = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tmpl = "tmpl:main"
