[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files                  = "src/**/*.py"
ignore_errors          = true
ignore_missing_imports = true
pretty                 = true
python_version         = "3.9"
show_column_numbers    = true
show_error_codes       = true
show_error_context     = true

[[tool.mypy.overrides]]
ignore_errors = false
module        = "tmpl"

[tool.poetry]
authors = ["Harrison Totty <harrisongtotty@gmail.com>"]
description = "A highly-configurable general-purpose templating program."
name = "tmpl"
readme = "README.md"
repository = "https://github.com/HarrisonTotty/tmpl"
version = "2.2.0"

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1"
PyYAML = "*"

[tool.poetry.dev-dependencies]
mypy            = "*"
pytest          = "*"
pytest-aio      = "*"
pytest-cov      = "*"
pytest-randomly = "*"

[tool.poetry.scripts]
tmpl = "tmpl:main"

[tool.pytest.ini_options]
addopts          = "-v --cov=tmpl"
python_files     = "*.py"
python_functions = "test_*"
testpaths        = "tests"
